--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
+    "express-csv": "^0.6.0",
     "request": "^2.72.0",
     "twit": "^2.2.4"
   }
